getCityInfo and getCurrencyCode functions written and console logs added to get data

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
         <h1>Travel Planner</h1>
     </div>
 
-    <div class = "input">
+    <div class="input">
         <input type="text" class="userInput" id="userInput1">
-        <input type="submit" value="Submit" class="button">
+        <button type="button" class="button" id="submit-button">Submit</button>
     </div>
 
     <div class="display" style="border:1px solid black">
