getCurrentWeather and getForecast functions written, event listeners to trigger all functions based on user input/preset button text

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <button  href="#">Hong Kong</button>
             <button  href="#">London</button>
             <button  href="#">New York</button>
-            <button  href="#">Syndey</button>
+            <button  href="#">Sydney</button>
     </div>
     
     
