created variables to be stored in localStorage, created second HTML sheet for search history

--- a/index.html
+++ b/index.html
@@ -5,11 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Travel Planner</title>
     <link rel="stylesheet" href="style.css">
+    
 </head>
 <body>
     <div class="navbar">
         <h1>Travel Planner</h1>
     </div>
+
+    <div class="previousSearch"><a href="searchHistory.html">View Search History</a></div>
 
     <div class="input">
         <input type="text" class="userInput" id="userInput1">
