changes to support cards and CSS changes.

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
         <div class = currenyExchange>
             <div>
-                <h2 class=>Curreny Exchange: </h1>
+                <h2 class=>Currency Exchange: </h1>
                     <div style="display: flex; flex-direction: row; justify-content: center; align-items: center; margin: 10px; padding: 10px">
                 
                     <p class = >USD</p>
@@ -105,23 +105,22 @@
 <!-- Print end result to page -->
 <!-- currently empty, content will be printed on screen, divs will be hidden or shown using AND/OR logic -->
         <h1>To Travel, or not to Travel, 'tis the Question!</h1>
-        <div class="display travel" style="border:1px solid black">
+        <div id="goodCard" class="display travel" style="border:1px solid black">
             <div class="card">
                 <div class="container">
                   <h4><b>Travel!</b></h4>
                   <p>Vacay!</p>
                 </div>
-              </div>
-              </div>
-
-              <div class="display thing-about-it" style="border:1px solid black">
+            </div>
+        </div>
+        <div id="badCard" class="display think-about-it" style="border:1px solid black">
                 <div class="card">
                     <div class="container">
                       <h4><b>Might want to think about that one!</b></h4>
                       <p>Bummer, dude.</p>
                     </div>
-                  </div>
-                  </div>         
+                </div>
+        </div>         
         </div>
     </div>
 
