--- a/index.html
+++ b/index.html
@@ -18,12 +18,6 @@
         <input type="text" class="userInput" id="userInput1">
         <button type="button" class="button" id="submit-button">Submit</button>
     </div>
-
-    <!-- <div class="display" style="border:1px solid black">
-        <h1 class=></h1>
-        <p class = ></p>
-        <p class=></p>
-    </div> -->
     
     <!-- City Tabs -->
     <div id="city-tabs" style="border:1px solid black">
@@ -59,7 +53,26 @@
         <p class = "wind">Wind: XX km/h</p>
         <p class = "humidity">Humidity: XX%</p>
     </div>
-    
+    <form action="#">
+        <div id="tempChoices">
+ 
+        <fieldset>
+          <label for="MinTemp">Select your minimum preferred temp</label>
+          <select name="minTemp" id="minTemp">
+            <option value="50">50°F</option>
+            <!-- <option value="50" selected="selected">50°F</option> -->
+            <option value="60">60°F</option>
+            <option value="70">70°F</option>
+          </select>
+          <label for="MaxTemp">Select your maximum preferred temp</label>
+          <select name="maxTemp" id="maxTemp">
+            <option value="80">80°F</option>
+            <option value="90">90°F</option>
+            <option value="100">100°F</option>
+            <!-- <option value="100" selected="selected">100°F</option> -->
+          </select>
+          <button id="set-temps" class="button">Set Temps</button>
+        </div>
     <!-- 5 Day Forecast Section -->
     <div class="forecast" style="border:1px solid black">
         <h2>5 Day Forecast</h2>
