added my initials  and any extra notes to comments for my portions of code

--- a/index.html
+++ b/index.html
@@ -60,7 +60,6 @@
           <label for="MinTemp">Select your minimum preferred temp</label>
           <select name="minTemp" id="minTemp">
             <option value="50">50°F</option>
-            <!-- <option value="50" selected="selected">50°F</option> -->
             <option value="60">60°F</option>
             <option value="70">70°F</option>
           </select>
@@ -69,7 +68,6 @@
             <option value="80">80°F</option>
             <option value="90">90°F</option>
             <option value="100">100°F</option>
-            <!-- <option value="100" selected="selected">100°F</option> -->
           </select>
           <button id="set-temps" class="button">Set Temps</button>
         </div>
@@ -94,7 +92,7 @@
     </div>
 
         
-        <!-- html for modals that pop up if there is an error with user input in the js (see if statements in api calls) -->
+        <!-- MB - html for modals that pop up if there is an error with user input in the js (see if statements in api calls) -->
         <div id="modal-empty">
             <div class="modal-header">
               <span class="close">&times;</span>
