--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <div style="display: flex; flex-direction: row; justify-content: center; align-items: center; margin: 10px; padding: 10px">
             
                 <p class = >USD</p>
-                    <input type="text" class="userInput" id="userInput2"> 
+                    <input type="number" class="userInput" id="userInput2"> 
                     <button type="submit" class="button" id="math-submit">Submit</button>
                         <p> &nbsp; will be worth &nbsp; <span id="currency-amt"></span> &nbsp; <span id="target-currency">{selected currency}</span></p>
                 
@@ -59,15 +59,19 @@
         <fieldset>
           <label for="MinTemp">Select your minimum preferred temp</label>
           <select name="minTemp" id="minTemp">
+            <option value="30">30°F</option>
+            <option value="40">40°F</option>
             <option value="50">50°F</option>
             <option value="60">60°F</option>
             <option value="70">70°F</option>
           </select>
           <label for="MaxTemp">Select your maximum preferred temp</label>
           <select name="maxTemp" id="maxTemp">
+            <option value="70">70°F</option>
             <option value="80">80°F</option>
             <option value="90">90°F</option>
             <option value="100">100°F</option>
+            <option value="110">110°F</option>
           </select>
           <button id="set-temps" class="button">Set Temps</button>
         </div>
@@ -128,6 +132,7 @@
                 <div class="container">
                   <h4><b>Travel!</b></h4>
                   <p>Vacay!</p>
+                  <button class="button"><a id="travel-link" href="" target="_blank">Time to book!</a></button>
                 </div>
             </div>
         </div>
