--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     </div>
     <form action="#">
         <div id="tempChoices">
- 
+ <!-- MB - dropdown menu for user to select their preferred min and max temps -->
         <fieldset>
           <label for="MinTemp">Select your minimum preferred temp</label>
           <select name="minTemp" id="minTemp">
