added button class to match styling

--- a/index.html
+++ b/index.html
@@ -123,8 +123,8 @@
         </div>
         <div id="modal-prevSearched">
             <h1>Search History</h1>
-            <button class="close">Go Back</button>
-            <button id="clear">Clear History</button>
+            <button class="close button">Go Back</button>
+            <button id="clear" class="button">Clear History</button>
             <ol id="searchHistory"></ol>
     
         </div>
