--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <button class="button preset-city">New York</button>
             <button class="button preset-city">Sydney</button>
     </div>
-     <!-- MB - dropdown menu for user to select their preferred min and max temps -->
+     <!-- dropdown menu for user to select their preferred min and max temps -->
      <form action="#">
         <div id="tempChoices">
  
@@ -102,7 +102,7 @@
     </div>
 
         
-        <!-- MB - html for modals that pop up if there is an error with user input in the js (see if statements in api calls) -->
+        <!-- html for modals that pop up if there is an error with user input in the js (see if statements in api calls) -->
         <div id="modal-empty">
             <div class="modal-header">
               <span class="close">&times;</span>
@@ -121,6 +121,7 @@
               <p>Oops! It looks like the city you entered isn't returning any results, please check your spelling and try again.</p>
             </div>
         </div>
+        <!-- search history modal -->
         <div id="modal-prevSearched">
             <h1>Search History</h1>
             <button class="close button">Go Back</button>
