added instructional text

--- a/index.html
+++ b/index.html
@@ -54,6 +54,9 @@
         </form>
         
     </div>
+    <div>
+        <p><b>Make sure and click the 'See Results' button at the bottom of the page!</b></p>
+    </div>
     <div class ="currencyExchange">
         <div>
             <h2 class=>Currency Exchange: </h2>
